--- a/src/componets/VideoStyles.css
+++ b/src/componets/VideoStyles.css
@@ -49,6 +49,9 @@
     font-size: 1rem;
     margin-bottom: 1.6rem;
   }
+  #video {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 1200px) {
